[gd_scene load_steps=6 format=3 uid="uid://bcx8dmbygfykr"]

[ext_resource type="AudioStream" uid="uid://bjbp3gohtx0is" path="res://Sounds/drone-ethereal-mist-background-235218.mp3" id="1_ejojg"]
[ext_resource type="Script" uid="uid://da8782bq6if52" path="res://scripts/musicController.gd" id="1_wia2r"]
[ext_resource type="AudioStream" uid="uid://rdf0r2m00wnn" path="res://Sounds/hARITON zOE - NEW dAYS (uNIQUE TECh).mp3" id="3_mobtd"]
[ext_resource type="AudioStream" uid="uid://cbuy2iuaxxdmg" path="res://Sounds/ethereal-landscape-space-music-301238.mp3" id="5_wia2r"]
[ext_resource type="AudioStream" uid="uid://v5hfrr5shm75" path="res://Sounds/sad-sorrowful-piano-music-330768.mp3" id="6_mobtd"]

[node name="Music Holder" type="Node2D"]
script = ExtResource("1_wia2r")

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wia2r")
autoplay = true
max_distance = 10000000000.0
attenuation = 0.0
panning_strength = 0.0
parameters/looping = true

[node name="MoonSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_ejojg")
volume_db = -80.0
autoplay = true
max_distance = 10000000000.0
panning_strength = 0.0
parameters/looping = true

[node name="BaseMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mobtd")
volume_db = -80.0
autoplay = true
max_distance = 10000000000.0
panning_strength = 0.0
playback_type = 1
parameters/looping = true

[node name="DeadMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_mobtd")
volume_db = -80.0
autoplay = true
max_distance = 10000000000.0
panning_strength = 0.0
parameters/looping = true
